Fix spawnmenu left column wrapping

--- a/Code/UI/Components/SpawnMenuPage.razor.scss
+++ b/Code/UI/Components/SpawnMenuPage.razor.scss
@@ -7,9 +7,11 @@ SpawnMenuPage
 
 SpawnMenuPage > .left
 {
-	width: 200px;
+	width: 256px;
 	flex-direction: column;
 	padding: 8px;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 SpawnMenuPage > .body
